# bulk-unzip

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.rs  metadata_stripper.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  metadata_stripper.rs
