[package]
name = "bulk-unzip-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "bulk_unzip_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["shell-open"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.7"
indicatif = "0.17"
walkdir = "2.3"
zip = "0.6"
id3 = "1.7"
mp3-duration = "0.1" 
